# cyd-emulator

./: .gitmodules  BUILD_SUCCESS.md  CMakeLists.txt  ESP-IDF-SETUP.md  FONT_RENDERING_ANALYSIS.md  FREERTOS_VALIDATION_PLAN.md  NEXT_STEPS.md  README.md  run-gui-with-firmware.bat  run-gui.bat
demos/common/: font.c  payload.h  touch.h
demos/freertos/: main.c
demos/lvgl/: main.c
demos/nolibrary/: main.c
include/: display.h  esp_chip_info.h  esp_log.h  esp_random.h  esp_rom_crc.h  esp_system.h  esp_timer.h  font.h  lv_conf.h  miniz.h  nvs.h  nvs_flash.h  sdcard.h
include/driver/: adc.h  gpio.h  i2c.h  ledc.h  spi_common.h  spi_master.h
include/freertos/: FreeRTOS.h  event_groups.h  portmacro.h  projdefs.h  queue.h  semphr.h  task.h  timers.h
include/rom/: ets_sys.h
src/: emu_board.h  emu_control.c  emu_control.h  emu_crc32.c  emu_display.c  emu_flexe.c  emu_flexe.h  emu_freertos.c  emu_gpio.c  emu_json.c  emu_json.h  emu_lvgl.c  emu_main.c  emu_nvs.c  emu_payload.c  emu_sdcard.c  emu_system.c  emu_timer.c  emu_touch.c
test-firmware/: freertos-stress-test.sh  run-all-tests.sh
test-firmware/10-freertos-minimal/: .gitignore  CMakeLists.txt  README.md  build.ps1  sdkconfig.defaults
test-firmware/10-freertos-minimal/main/: main.c
test-firmware/20-benchmark/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
test-firmware/20-benchmark/main/: main.c
test-firmware/50-lvgl-basic/: .gitignore  CMakeLists.txt  MEMORY_FIX.md  README.md  TESTING.md  build.bat  build.ps1  sdkconfig.defaults
test-firmware/50-lvgl-basic/main/: CMakeLists.txt  idf_component.yml  main.c
